<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.puppies4developers2.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="horizontal">

                <ImageView
                    style="@style/head_paw"
                    android:src="@drawable/pawpaw2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/app_name"
                    android:textColor="@color/gray"
                    android:textSize="30sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="fitXY"
                android:src="@drawable/headpicone" />

        </LinearLayout>

        <LinearLayout
            style="@style/text_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="01"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/section_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_header"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="center"
                android:textSize="12.5sp" />

            <TextView
                style="@style/section_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:textColor="@color/orange"
                android:textStyle="italic" />

            <TextView
                style="@style/section_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@color/blue" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <ImageView
                    style="@style/contact_image"
                    android:src="@drawable/phone" />

                <TextView
                    style="@style/contact_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mail_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <ImageView
                    style="@style/contact_image"
                    android:src="@drawable/mail2" />

                <TextView
                    style="@style/contact_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mail" />

                <ImageView
                    style="@style/end_paw"
                    android:layout_height="match_parent"
                    android:src="@drawable/pawpaw2" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>